# desktopwright

./: Cargo.toml  README.md
.github/workflows/: release.yml
skills/desktopwright/: SKILL.md
skills/desktopwright/references/: app-lifecycle.md  capture.md  coordinate-targeting.md  e2e-testing.md  element-interaction.md  getting-started.md  input.md  troubleshooting.md  waiting.md  window-targeting.md
src/: cli.rs  main.rs  output.rs  platform.rs  version.rs
src/cli/: app.rs  capture.rs  click_element.rs  drag.rs  element_action.rs  focus.rs  get_text.rs  install.rs  key.rs  list.rs  mouse.rs  scroll.rs  type_text.rs  ui_tree.rs  wait.rs  window.rs
src/core/: error.rs  platform.rs  types.rs
src/platform/: windows.rs
src/platform/windows/: capture.rs  input.rs  ui_tree.rs  window.rs
