[package]
name = "desktopwright"
version = "0.1.1"
edition = "2024"
description = "GUI automation CLI tool"
repository = "https://github.com/secchanu/desktopwright"

[[bin]]
name = "desktopwright"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
include_dir = "0.7"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
xcap = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_HiDpi",
]}
uiautomation = "0.24"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
